06 - Repair Design Project - fix bugs on mobile nav

--- a/styles.css
+++ b/styles.css
@@ -19,70 +19,13 @@
     box-sizing: border-box;
     font-family: 'Nunito Sans',Helvetica, Arial, sans-serif;
 }
-
-/* @media screen and (max-width: 374px) {
-
-    .headnav {
-        display: grid;
-        width: 100vw;
-        grid-template-columns: 1fr max-content 8.76vw max-content 7vw max-content 3.4vw min-content 1fr;
-        grid-template-rows: 12.1vh;
-        align-items: center;
-        background: #131313;
-        color: #fff;
-    }
     
-    .headnav__name {
-        font-size: 0.69em;
-        text-transform: uppercase;
-        grid-column: 2 / 3;
-        color: #E3B873;
-    }
-    
-    .headnav__menu {
-        display: none;
-    }
-    
-    .headnav__menu > li {
-        display: none;
-    } 
-    
-    .headnav__menu > li:first-child {
-        display: none;
-    }
-    
-    .headnav__menu-item {
-        display: none;
-    }
-    
-    .headnav__menu-item:hover {
-        display: none;
-    }
-    
-    .headnav__phone {
-        font-size: 0.69em;
-        grid-column: 6 / 7;
-        color: #E3B873;
-        text-decoration: underline; 
-    }
-    
-    .headnav__button {
-        display: none;
-    }
-    
-    .headnav__button_title {
-        display: none;
-    }
-} */
-    
-
 
 .headnav {
     display: grid;
     width: 100vw;
-    /* grid-template-columns: 1fr max-content 8.76vw max-content 7vw max-content 3.4vw min-content 1fr; */
     grid-template-columns: repeat(auto-fit, minmax(50px, 1fr)) 0.97vw;
-    grid-template-rows: 12.1vh;
+    grid-template-rows: minmax(57px, 83px);
     align-items: center;
     background: #131313;
     color: #fff;
@@ -98,8 +41,7 @@
 }
 
 .headnav__menu {
-    padding-left: 9.7vw;
-    display: inline;
+    padding-left: 8.1vw;
     grid-column: span 6;
 }
 
@@ -135,10 +77,6 @@
 .headnav__button{
     width: 11.18vw;
     height: 5.51vh;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background: #E3B873;
     border: 0;
     border-radius: 2px;
@@ -149,4 +87,45 @@
     font-size: 0.72vw;
     font-style: italic;
     text-transform: uppercase;
+}
+
+@media screen and (max-width: 600px) {
+
+    .headnav {
+        display: grid;
+        width: 100vw;
+        grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+        grid-template-rows: minmax(auto, 57px);
+        align-items: center;
+        background: #131313;
+        color: #fff;
+    }
+    
+    .headnav__name {
+        padding-left: 4.8vw;
+        font-size: 2.91vw;
+        text-transform: uppercase;
+        color: #E3B873;
+        grid-column: span 2;
+    
+    }
+    
+    .headnav__menu  {
+        display: none;
+    }
+    
+    
+    .headnav__phone {
+        padding-left: 17.9vw;
+        font-size: 2.91vw;
+        color: #fff;
+        text-decoration: none;
+        grid-column: span 2;
+    
+    }
+    
+    .headnav__button{
+        display: none;
+    }
+    
 }
